@@ -20,6 +20,9 @@
   happen is if a log filename was accidentally set to a directory instead
   of a file.  Thanks to Grzegorz Nosek for reporting this issue.
 
+- Fixed a bug introduced in 3.1.0 where ``supervisord`` could crash when
+  attempting to display a resource limit error.
+
 3.1.3 (2014-10-28)
 ------------------
 
